--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "echarts": "^5.5.0",
     "express": "^4.19.2",
     "pg": "^8.11.5",
