--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
         "outDir": "dist",
         "resolveJsonModule": true,
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "static/charts.ts"],
 }
