--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
         "moduleResolution": "NodeNext",
         "target": "ES2020",
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "./dist",
         "resolveJsonModule": true,
+        "esModuleInterop": true
     },
-    "include": ["src/**/*", "static/charts.ts"],
+    "include": [
+        "src/**/*"
+    ]
 }
