--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
-    "compilerOptions": {
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "target": "ES2020",
-        "sourceMap": true,
-        "outDir": "./dist",
-        "resolveJsonModule": true,
-        "esModuleInterop": true
-    },
-    "include": [
-        "src/**/*"
+    "files": [],
+    "references": [
+        {
+            "path": "./src/backend"
+        },
+        {
+            "path": "./src/frontend"
+        }
     ]
 }
