--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
-    "files": [],
-    "references": [
-        {
-            "path": "./src/backend"
-        },
-        {
-            "path": "./src/frontend"
-        }
+    "compilerOptions": {
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "target": "ES2020",
+        "sourceMap": true,
+        "outDir": "dist/",
+        "resolveJsonModule": true,
+        "esModuleInterop": true
+    },
+    "include": [
+        "**/*"
     ]
 }
+
