--- a/src/frontend/public/tsconfig.json
+++ b/src/frontend/public/tsconfig.json
@@ -4,7 +4,7 @@
         "moduleResolution": "node",
         "target": "ES2020",
         "sourceMap": true,
-        "outDir": "../../dist/frontend/public/charts",
+        "outDir": "../../../dist/frontend/public",
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "noImplicitReturns": true,
