--- a/src/frontend/public/tsconfig.json
+++ b/src/frontend/public/tsconfig.json
@@ -25,7 +25,7 @@
     },
     "include": [
         "**/*"
-    ],
+, "../Outdated/charts.js", "../Outdated/indivivdualCharts.js"    ],
     "exclude": [
         "node_modules",
         "**/*.spec.ts"
