--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 WEB_PORT=3000
+
+DB_HOST=192.168.0.200
 DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=admin
+DB_NAME=pizza
 
 DEFAULT_DATE=2022-12-01
 CURRENT_DATE=2022-12-31
